# either-or-both

./: .clippy.toml  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  rustfmt.toml
.bumpversion/: msrv.toml  version.toml
.cargo/: config.toml
.dicts/: custom.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cicd.yml  publish.yml
benches/: iai_callgrind.rs
benchmarks/: .clippy.toml  Cargo.toml
benchmarks/benches/: either.rs  gungraun.rs  iai_callgrind.rs
src/: different.rs  either.rs  either_or_both.rs  error.rs  iter.rs  iter_either.rs  lib.rs  same.rs
src/either/: iter.rs  mod.rs  traits.rs
src/either_or_both/: iter.rs  mod.rs  traits.rs
tests/: tests.rs
tests/it/: either.rs  either_or_both.rs  either_or_both_same_type.rs  either_std.rs  error.rs  iter_either.rs  main.rs
tests/it/either/: iter.rs  mod.rs  std.rs  std_tests.rs
tests/it/either_or_both/: iter.rs  mod.rs  same_type.rs  std.rs  traits.rs
