[package]
name = "benchmarks"
version = "0.0.0"
edition = "2021"
rust-version = "1.89.0"
publish = false

[dev-dependencies]
either-or-both = { version = "0.3.1", path = ".." }
gungraun = { version = "0.18" }

[[bench]]
harness = false
name = "gungraun"
path = "benches/gungraun.rs"

[[bench]]
harness = false
name = "either"
path = "benches/either.rs"
